[gd_scene load_steps=33 format=3 uid="uid://45jd21wkgn1a"]

[ext_resource type="Script" path="res://src/casa.gd" id="1_m4tvo"]
[ext_resource type="Texture2D" uid="uid://dqfjpy0qng88s" path="res://src/assets/Casa sin mesas o sillas.png" id="2_osovo"]
[ext_resource type="PackedScene" uid="uid://7rp0g6pimo3j" path="res://src/characters/gray_cat.tscn" id="2_qdt4q"]
[ext_resource type="PackedScene" uid="uid://cwasgich4vlfb" path="res://src/passthrough_platform.tscn" id="3_suqoy"]
[ext_resource type="Texture2D" uid="uid://bqptrs0kxslh6" path="res://src/assets/objetos_casa/set de sillas 1.png" id="4_ijcpa"]
[ext_resource type="Script" path="res://src/passthrough_platform.gd" id="4_m8dhf"]
[ext_resource type="Texture2D" uid="uid://dnlvkt5qyui8d" path="res://src/assets/objetos_casa/set de sillas 2.png" id="5_5vc5w"]
[ext_resource type="PackedScene" uid="uid://dodysdyq4di6m" path="res://src/collectable/teleport_fish.tscn" id="5_77jy2"]
[ext_resource type="Script" path="res://src/tacho_de_basura.gd" id="7_1o388"]
[ext_resource type="Texture2D" uid="uid://dvf4wio73sm3x" path="res://src/assets/objetos_casa/tacho de basura.png" id="8_5ue2g"]
[ext_resource type="AudioStream" uid="uid://dyyxcatt71aes" path="res://src/assets/audio/music/Gato_feliz.wav" id="9_1d4su"]
[ext_resource type="PackedScene" uid="uid://dt12drsekccur" path="res://src/collectable/rat_1.tscn" id="9_tvsw7"]
[ext_resource type="Script" path="res://src/collectable/rat_1.gd" id="10_36sxl"]
[ext_resource type="PackedScene" uid="uid://y86vy5d5qkkm" path="res://src/collectable/rat_2.tscn" id="10_vaeda"]
[ext_resource type="PackedScene" uid="uid://srpr8laql0b8" path="res://src/collectable/rat_3.tscn" id="11_84smp"]
[ext_resource type="PackedScene" uid="uid://bfty1wgyh58bx" path="res://src/collectable/rat_4.tscn" id="12_fnect"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e2os4"]
size = Vector2(950.75, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_57p70"]
size = Vector2(950.656, 41)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hm5a7"]
size = Vector2(368, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1vxlg"]
size = Vector2(369.5, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ptq2g"]
size = Vector2(410, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xhoir"]
size = Vector2(412, 47)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rrhfb"]
size = Vector2(544.5, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fcb02"]
size = Vector2(546.798, 61.5551)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0mq1j"]
size = Vector2(382, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hb1vt"]
size = Vector2(155, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m252q"]
size = Vector2(155, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_msmv3"]
size = Vector2(273, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cavvd"]
size = Vector2(134, 29.4788)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vbmsu"]
size = Vector2(132, 60.4569)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7wknk"]
size = Vector2(136, 55)

[sub_resource type="GDScript" id="GDScript_vr1j2"]
script/source = "extends Area2D




func _on_body_entered(body: Node2D) -> void:
	queue_free()
"

[node name="casa" type="StaticBody2D"]
script = ExtResource("1_m4tvo")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-23, -434, 3369, -434, 3354, 582, 2, 588, 1, -472, -4, -475, -5.48297, -430.238, -42, 672, 3532, 662, 3521, -540, -19, -532)

[node name="FondoCasaFreepik" type="Sprite2D" parent="."]
position = Vector2(1682, 91.375)
scale = Vector2(0.478, 0.478)
texture = ExtResource("2_osovo")

[node name="teleportFish" parent="." instance=ExtResource("5_77jy2")]
position = Vector2(3245, 158)
scale = Vector2(1.965, 1.965)

[node name="GrayCat" parent="." instance=ExtResource("2_qdt4q")]
position = Vector2(0, 0)

[node name="Camera2D" type="Camera2D" parent="GrayCat"]
position = Vector2(163, 524)
limit_left = 0
limit_top = -430
limit_right = 3365
limit_bottom = 617
position_smoothing_enabled = true
editor_draw_limits = true

[node name="SetDeSillas2" type="Sprite2D" parent="."]
position = Vector2(1864, 441)
scale = Vector2(0.38209, 0.37036)
texture = ExtResource("5_5vc5w")

[node name="SetDeSillas1" type="Sprite2D" parent="."]
position = Vector2(1232, 439)
scale = Vector2(0.414418, 0.414418)
texture = ExtResource("4_ijcpa")

[node name="table_platform" parent="." instance=ExtResource("3_suqoy")]

[node name="CollisionShape2D" parent="table_platform" index="0"]
position = Vector2(1220, 345)

[node name="Area2D" parent="table_platform" index="1"]
position = Vector2(640, 22)
collision_mask = 2

[node name="CollisionShape2D" parent="table_platform/Area2D" index="0"]
position = Vector2(576, 307)

[node name="mesada_izquierda" type="StaticBody2D" parent="."]
position = Vector2(-181, -51)
script = ExtResource("4_m8dhf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="mesada_izquierda"]
position = Vector2(764.375, 327)
shape = SubResource("RectangleShape2D_e2os4")
one_way_collision = true

[node name="Area2D" type="Area2D" parent="mesada_izquierda"]
position = Vector2(1, 68)
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="mesada_izquierda/Area2D"]
position = Vector2(759.672, 248)
shape = SubResource("RectangleShape2D_57p70")

[node name="estante_microondas" type="StaticBody2D" parent="."]
script = ExtResource("4_m8dhf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="estante_microondas"]
position = Vector2(579, 57)
shape = SubResource("RectangleShape2D_hm5a7")
one_way_collision = true

[node name="Area2D" type="Area2D" parent="estante_microondas"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="estante_microondas/Area2D"]
position = Vector2(580, 43)
shape = SubResource("RectangleShape2D_1vxlg")

[node name="mesa_derecha" type="StaticBody2D" parent="."]
script = ExtResource("4_m8dhf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="mesa_derecha"]
position = Vector2(1960, 347.5)
shape = SubResource("RectangleShape2D_ptq2g")
one_way_collision = true

[node name="Area2D" type="Area2D" parent="mesa_derecha"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="mesa_derecha/Area2D"]
position = Vector2(1960, 335.5)
shape = SubResource("RectangleShape2D_xhoir")

[node name="mesada_derecha" type="StaticBody2D" parent="."]
script = ExtResource("4_m8dhf")

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="mesada_derecha"]
position = Vector2(2881.75, 304)
shape = SubResource("RectangleShape2D_rrhfb")
one_way_collision = true

[node name="Area2D" type="Area2D" parent="mesada_derecha"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="mesada_derecha/Area2D"]
position = Vector2(2880.6, 283.778)
shape = SubResource("RectangleShape2D_fcb02")

[node name="heladera" type="StaticBody2D" parent="."]
script = ExtResource("4_m8dhf")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="heladera"]
position = Vector2(2394, -10)
polygon = PackedVector2Array(-113, 2, 205, -2, 267, 9, 268, -5, 206, -18, -114, -8, -114, 10)
one_way_collision = true

[node name="Area2D" type="Area2D" parent="heladera"]
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="heladera/Area2D"]
position = Vector2(2470, -27)
shape = SubResource("RectangleShape2D_0mq1j")

[node name="microondas_derecho" type="StaticBody2D" parent="."]
script = ExtResource("4_m8dhf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="microondas_derecho"]
position = Vector2(2713.5, 203.5)
shape = SubResource("RectangleShape2D_hb1vt")
one_way_collision = true

[node name="Area2D" type="Area2D" parent="microondas_derecho"]
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="microondas_derecho/Area2D"]
position = Vector2(2712.5, 195)
shape = SubResource("RectangleShape2D_m252q")

[node name="estanteria_izquierda" type="StaticBody2D" parent="."]
script = ExtResource("4_m8dhf")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="estanteria_izquierda"]
position = Vector2(763.004, -172.284)
polygon = PackedVector2Array(-1.00391, -2.71619, 228.996, 7.28381, 228.996, -2.71619, -2.00391, -14.7162, -43.0039, 5.28381, -43.0039, 13.2838)
one_way_collision = true

[node name="Area2D" type="Area2D" parent="estanteria_izquierda"]
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="estanteria_izquierda/Area2D"]
position = Vector2(856.5, -184)
shape = SubResource("RectangleShape2D_msmv3")

[node name="lampara_izquierda" type="StaticBody2D" parent="."]
script = ExtResource("4_m8dhf")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="lampara_izquierda"]
position = Vector2(1275, -20.7394)
shape = SubResource("RectangleShape2D_cavvd")
one_way_collision = true

[node name="Area2D" type="Area2D" parent="lampara_izquierda"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="lampara_izquierda/Area2D"]
position = Vector2(1275, -40)
shape = SubResource("RectangleShape2D_vbmsu")

[node name="lampara_derecha" type="StaticBody2D" parent="."]
position = Vector2(1702.05, -42.8398)
script = ExtResource("4_m8dhf")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="lampara_derecha"]
position = Vector2(308.949, 19.8398)
shape = SubResource("RectangleShape2D_cavvd")
one_way_collision = true

[node name="Area2D" type="Area2D" parent="lampara_derecha"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="lampara_derecha/Area2D"]
position = Vector2(306.949, 3.83975)
shape = SubResource("RectangleShape2D_vbmsu")

[node name="tacho_de_basura" type="StaticBody2D" parent="."]
position = Vector2(3624.31, 514.279)
script = ExtResource("7_1o388")

[node name="Sprite2D" type="Sprite2D" parent="tacho_de_basura"]
position = Vector2(-369.314, -23.2788)
scale = Vector2(0.472014, 0.472014)
texture = ExtResource("8_5ue2g")

[node name="Area2D" type="Area2D" parent="tacho_de_basura"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="tacho_de_basura/Area2D"]
position = Vector2(-365.314, -129.779)
shape = SubResource("RectangleShape2D_7wknk")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="tacho_de_basura"]
position = Vector2(-371.721, -83.1573)
polygon = PackedVector2Array(-62.5925, -21.1215, 36.4075, -23.1215, 73.4075, -17.1215, 73.4075, -25.1215, 37.4075, -35.1215, -62.5925, -31.1215)
one_way_collision = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_1d4su")
volume_db = -10.0
autoplay = true

[node name="rat1" parent="." instance=ExtResource("9_tvsw7")]
position = Vector2(-186, -496)
scale = Vector2(1.535, 1.535)
script = ExtResource("10_36sxl")

[node name="rat2" parent="." instance=ExtResource("10_vaeda")]
position = Vector2(640, 20)
scale = Vector2(1.535, 1.535)

[node name="rat_3" parent="." instance=ExtResource("11_84smp")]
position = Vector2(1284, -89)
scale = Vector2(1.535, 1.535)

[node name="rat_4" parent="." instance=ExtResource("12_fnect")]
position = Vector2(1841, 153)
scale = Vector2(1.535, 1.535)
script = SubResource("GDScript_vr1j2")

[node name="rat_5" parent="." instance=ExtResource("9_tvsw7")]
position = Vector2(1164, -885)
scale = Vector2(1.535, 1.535)

[connection signal="body_entered" from="mesada_izquierda/Area2D" to="GrayCat" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="mesada_izquierda/Area2D" to="mesada_izquierda" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="mesa_derecha/Area2D" to="mesa_derecha" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="tacho_de_basura/Area2D" to="tacho_de_basura" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="tacho_de_basura/Area2D" to="tacho_de_basura" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="rat2" to="rat2" method="_on_body_entered"]
[connection signal="body_entered" from="rat_3" to="rat_3" method="_on_body_entered"]
[connection signal="body_entered" from="rat_4" to="rat_4" method="_on_body_entered"]

[editable path="table_platform"]
